# hustoj-mcp

./: .gitattributes  .gitignore  AGENTS.md  README.md  app.py  main.py  main.spec  mcp.py  pyproject.toml
.config/: .gitignore
.github/chatmodes/: README.md  beatsmode.chatmode.md
.github/workflows/: pyinstaller.yaml
example/: .gitignore
src/: __init__.py  client.py  config_dir.py  config_store.py  session_store.py
tests/: test_client_helpers.py  test_session_store.py
