[project]
name = "hustoj-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.15.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "platformdirs>=4.0.0",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
